@@ -24,6 +24,8 @@
 #include <ns3/log.h>
 #include <ns3/inet-socket-address.h>
 #include <ns3/mac48-address.h>
+#include <ns3/string.h>
+#include <ns3/boolean.h>
 #include <ns3/eps-bearer.h>
 #include <ns3/ipv4-address.h>
 #include <ns3/ipv4-address.h>
@@ -174,6 +176,26 @@ PointToPointEpcHelper::GetTypeId (void)
                    UintegerValue (3000),
                    MakeUintegerAccessor (&PointToPointEpcHelper::m_x2LinkMtu),
                    MakeUintegerChecker<uint16_t> ())
+    .AddAttribute ("S1uLinkPcapPrefix",
+                   "Prefix for Pcap generated by S1-U link",
+                   StringValue ("s1-u"),
+                   MakeStringAccessor (&PointToPointEpcHelper::m_s1uLinkPcapPrefix),
+                   MakeStringChecker ())
+    .AddAttribute ("X2LinkPcapPrefix",
+                   "Prefix for Pcap generated by X2 link",
+                   StringValue ("x2"),
+                   MakeStringAccessor (&PointToPointEpcHelper::m_x2LinkPcapPrefix),
+                   MakeStringChecker ())
+    .AddAttribute ("X2LinkEnablePcap",
+                   "Enable Pcap for X2 link",
+                   BooleanValue (false),
+                   MakeBooleanAccessor (&PointToPointEpcHelper::m_enablePcapOverX2),
+                   MakeBooleanChecker ())
+    .AddAttribute ("S1uLinkEnablePcap",
+                   "Enable Pcap for X2 link",
+                   BooleanValue (false),
+                   MakeBooleanAccessor (&PointToPointEpcHelper::m_enablePcapOverS1U),
+                   MakeBooleanChecker ())
   ;
   return tid;
 }
@@ -215,11 +237,17 @@ PointToPointEpcHelper::AddEnb (Ptr<Node> enb, Ptr<NetDevice> lteEnbNetDevice, ui
   PointToPointHelper p2ph;
   p2ph.SetDeviceAttribute ("DataRate", DataRateValue (m_s1uLinkDataRate));
   p2ph.SetDeviceAttribute ("Mtu", UintegerValue (m_s1uLinkMtu));
-  p2ph.SetChannelAttribute ("Delay", TimeValue (m_s1uLinkDelay));  
+  p2ph.SetChannelAttribute ("Delay", TimeValue (m_s1uLinkDelay));
   NetDeviceContainer enbSgwDevices = p2ph.Install (enb, m_sgwPgw);
   NS_LOG_LOGIC ("number of Ipv4 ifaces of the eNB after installing p2p dev: " << enb->GetObject<Ipv4> ()->GetNInterfaces ());  
   Ptr<NetDevice> enbDev = enbSgwDevices.Get (0);
   Ptr<NetDevice> sgwDev = enbSgwDevices.Get (1);
+
+  if (m_enablePcapOverS1U)
+    {
+      p2ph.EnablePcapAll(m_s1uLinkPcapPrefix);
+    }
+
   m_s1uIpv4AddressHelper.NewNetwork ();
   Ipv4InterfaceContainer enbSgwIpIfaces = m_s1uIpv4AddressHelper.Assign (enbSgwDevices);
   NS_LOG_LOGIC ("number of Ipv4 ifaces of the eNB after assigning Ipv4 addr to S1 dev: " << enb->GetObject<Ipv4> ()->GetNInterfaces ());
@@ -298,6 +326,11 @@ PointToPointEpcHelper::AddX2Interface (Ptr<Node> enb1, Ptr<Node> enb2)
   NS_LOG_LOGIC ("number of Ipv4 ifaces of the eNB #2 after installing p2p dev: " << enb2->GetObject<Ipv4> ()->GetNInterfaces ());
   Ptr<NetDevice> enb1Dev = enbDevices.Get (0);
   Ptr<NetDevice> enb2Dev = enbDevices.Get (1);
+
+  if (m_enablePcapOverX2)
+    {
+      p2ph.EnablePcapAll(m_x2LinkPcapPrefix);
+    }
 
   m_x2Ipv4AddressHelper.NewNetwork ();
   Ipv4InterfaceContainer enbIpIfaces = m_x2Ipv4AddressHelper.Assign (enbDevices);
